<resources>
    <string name="app_name">TestImageLoaders</string>

    <string name="test_single">测试单图</string>
    <string name="test_list">测试列表</string>
    <string name="test_list_gif">测试动图</string>

    <string name="test_single_medium">中图</string>
    <string name="test_single_large">大图</string>
    <string name="test_single_extremely_large">超大图</string>

    <string name="test_anim_medium">一般动图</string>
    <string name="test_anim_large">高清动图</string>
    <string name="test_anim_ex_large">超高清动图</string>

    <string name="start_load">开始加载</string>
    <string name="clear_cache">清空缓存</string>
    <string name="load_using">加载耗时</string>
    <string name="performance_stats">性能数据</string>

    <string name="name_picasso">Picasso</string>
    <string name="name_glide">Glide</string>
    <string name="name_fresco">Fresco</string>

    <string name="loading">正在加载…</string>

    <string name="load_cost_in_ms">加载耗时%d ms</string>

    <string name="stats_monitor_fps_ave">平均fps: %f</string>
    <string name="stats_monitor_fps_min">最低fps: %f</string>

    <string name="stats_monitor_mem_ave">平均使用内存: %f MB</string>
    <string name="stats_monitor_mem_max">最大使用内存: %f MB</string>
    <string name="stats_monitor_mem_variance">标准差(抖动): %f</string>
</resources>
