<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/picker_bg"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:weightSum="1"
        >

        <Button
            android:id="@+id/start_load"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/start_load"
            />

        <RadioGroup
            android:id="@+id/type_rg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:checkedButton="@+id/radio_picasso"
            android:orientation="vertical"
            >

            <RadioButton
                android:id="@+id/radio_picasso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_picasso"
                />

            <RadioButton
                android:id="@+id/radio_glide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_glide"
                />

            <RadioButton
                android:id="@+id/radio_fresco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_fresco"
                />
        </RadioGroup>

        <Button
            android:id="@+id/clean_cache"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/clear_cache"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/load_using"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/performance_stats"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:weightSum="1"
        >

        <TextView
            android:id="@+id/loading_cost"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            />

        <TextView
            android:id="@+id/performance"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:isScrollContainer="true"
            />
    </LinearLayout>


</LinearLayout>
